--- a/004_Random_Background_Color_Changer/index.html
+++ b/004_Random_Background_Color_Changer/index.html
@@ -6,7 +6,7 @@
     <title> Random Background Color</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-
+</head>
 <body>
     <button>Change Background Color</button>
     <span></span>
