--- a/006_Date_Formatter/index.html
+++ b/006_Date_Formatter/index.html
@@ -8,7 +8,9 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <!-- h1 class should be title -->
     <h1 class="heading">Today's Date <img src="./calenda-icon.svg" alt="calendar-icon" /></h1>
+    <!-- div class should be dropdown-container -->
     <div class="container">
       <select>
         <option value="dd-mm-yyyy">Day,Month,Year</option>
