--- a/008_Football_Team_Cards/index.html
+++ b/008_Football_Team_Cards/index.html
@@ -164,6 +164,6 @@
       </div>
     </main>
     <footer>&copy; freeCodeCamp</footer>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
