--- a/009_Todo/index.html
+++ b/009_Todo/index.html
@@ -8,11 +8,9 @@
     <script src="script.js" defer></script>
   </head>
   <body>
- 
       <h1 class="title">Todo App</h1>
       <main>
-      <form>
-        
+      <form action="">
           <img src="./close-icon.svg" alt="" />
           <div>
             <label for="title-input">Title</label>
@@ -33,29 +31,12 @@
 
             <textarea rows="4" id="description"></textarea>
           </div>
-          <button class="add-task-button">Add Task</button>
-
-        
+          <button type="submit" class="add-task-button">Add Task</button>        
       </form>
-      <button class="add-new-task-button">Add New Task</button>
-
+      <button  class="add-new-task-button">Add New Task</button>
+      <div class="todos-container"></div>
     </main>
   </body>
 </html>
 
-<!-- <div>
-    <span>Title:</span>
-    <span class="title"></span>
-  </div>
-  <div>
-    <span>Date:</span>
-    <span class="title"></span>
-  </div>
-  <div>
-    <span>Description:</span>
-    <span class="title"></span>
-  </div>
-  <div>
-    <button>Edit</button>
-    <button>Delete</button>
-  </div> -->
+
